fix css darkmode toggle and readme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="author" content="emmanuel tulinayo" >
         <link rel="stylesheet" href="./css/normalize.css" >
         <link rel="stylesheet" href="./css/index.css" >
-        <link rel="icon" href="favicon_wave.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <script defer src="./js/wiki.js"></script>
         <script defer src="./js/observer.js"></script>
         <title> Emmanuel Tulinayo </title>
@@ -22,15 +22,12 @@
 
     <body>
         <header>
-            <div class="block--darkmode">
-                <!-- <input type="radio" name="darkmode" id="dark">
-                <input type="radio" name="darkmode" id="light"> -->
-                
+            <div class="block--darkmode">                
                 <label class="label--dark">
                     <input type="radio" name="darkmode" id="dark">
                 </label>
                 <label class="label--light">
-                    <input type="radio" name="darkmode" id="light">
+                    <input checked type="radio" name="darkmode" id="light">
                 </label>
             </div>
             <div class="block">
@@ -43,18 +40,18 @@
                 <ul class="block--header tags">
                     <li>JavaScript</li>
                     <!-- <li>Responsive websites</li> -->
-                    <li>JSDoc</li>
+                    <!-- <li>JSDoc</li> -->
                     <li>Jest</li>
-                    <li>Testing-library</li>
+                    <li>prop-types</li>
+                    <!-- <li>Testing-library</li> -->
                     <li>Lighthouse SEO</li>
                     <li>Accessibility</li>
                     <!-- <li>Fullstack Applications</li> -->
                     <li>MERN Stack</li>
-                    <li>React</li>
+                    <!-- <li>React</li> -->
                     <li>React-dom</li>
                     <li>React-router-dom</li>
                     <li>redux-toolkit</li>
-                    <li>prop-types</li>
                     <li>JWT</li>
                     <li>NodeJS</li>
                     <li>Express</li>
