--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html" >
-        <!-- <meta http-equiv="content-security-policy" content="upgrade-insecure-requests">
+        <!--  -->
+        <meta http-equiv="content-security-policy" content="upgrade-insecure-requests">
         <meta http-equiv="content-security-policy" content="script-src 'self'">
         <meta http-equiv="content-security-policy" content="object-src 'none'">
         <meta http-equiv="content-security-policy" content="frame-ancestors 'none'">
-        <meta name="referrer" content="strict-origin-when-cross-origin" > -->
+        <meta name="referrer" content="strict-origin-when-cross-origin" >
+        <!--  -->
         <meta name="color-scheme" content="dark light" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="I am a frontend oriented, fullstack Web developper.">
